--- a/dsa_adrc/static/index.html
+++ b/dsa_adrc/static/index.html
@@ -15,17 +15,21 @@
  <script src="bower_components/openseadragon/built-openseadragon/openseadragon/openseadragon.min.js"></script>
  <!-- endbower -->
 
+<script src="bower_components/d3/d3.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.theme.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.structure.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery.dataTables.css" />
     <link href="css/bootstrap-switch.css" rel="stylesheet" media="screen">
+
+
+<!--   <link rel="stylesheet" type="text/css" media="screen" href="css/mnviewer_style.css"> -->
+
     <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js" type="text/javascript"></script> 
     <!-- really should move to bootstrap3 -->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="js/openseadragon.min.js" type="text/javascript"></script>
     <script src="js/openseadragon_setup_functions.js"></script>
     <script src="js/colornames_to_hex_hash.js"></script>
     <script src="js/mousetrap.min.js"></script>
@@ -36,12 +40,12 @@
     <script type="text/javascript" src="osd-filters/osd_filters.js"></script>
 
 
-
                 <script src="js/openseadragon-imaginghelper.min.js"></script>
                 <script src="js/openseadragon-viewerinputhook.min.js"></script>
                 <script src="js/knockout-3.1.0.js"></script>
                 <script src="js/viewer.js"></script>
 
+    <script type="text/javascript" src="js/openseadragon-svg-overlay.js"></script>
 
     <style>
     body {
@@ -148,6 +152,20 @@
         margin: 0px;
         padding: 0px;
     }
+
+.overlaySvg
+{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    clip: auto;
+}
+
     </style>
 </head>
 
@@ -435,7 +453,7 @@
             clickTimeThreshold: 50,
             clickDistThreshold: 50,
             moveHandler: function(event) {
-                console.log(event.position);
+            //    console.log(event.position);
             }
         });
         console.log(mousetracker);
@@ -627,7 +645,7 @@
     //See http://www.datatables.net/forums/discussion/1959/image-thumbs-in-table-column-lazy-loading/p1 for example
     function customFnRowCallback(nRow, aData, iDisplayIndex) {
         var rowdata = aData[0].split('#');
-             console.log(rowdata);
+//             console.log(rowdata);
         var html = '<a href=\"javascript:;\" onclick=\"load_image(\'' + rowdata[0] + '\',\'' + rowdata[1] + '\')\">' + rowdata[2] + '<br /><img src=\"' + rowdata[3] + '\"></a>';
         $('td:eq(0)', nRow).html(html);
         return nRow;
@@ -714,6 +732,14 @@
                         <td id="dziSizePoints"></td>
                     </tr>
                 </table>
+	<div data-bind="with: statusObj">
+						<span>Mouse Pos: </span>
+						<span>(</span>
+						<span data-bind="text:(haveImage() &&  haveMouse()) ? mouseImgX().toFixed(0) : '-'"></span>
+						<span>, </span>
+						<span data-bind="text:(haveImage() &&  haveMouse()) ? mouseImgY().toFixed(0) : '-'"></span>
+						<span>)</span>
+					</div>
         </span>
     </div>
 </body>
