going back to mikes basic code

--- a/dsa_adrc/static/index.html
+++ b/dsa_adrc/static/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.structure.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery.dataTables.css" />
     <link ref="stylesheet" type="text/css" media="screen" href="css/pancan.css" />
+
+
     <link href="css/bootstrap-switch.css" rel="stylesheet" media="screen">
     <!--   <link rel="stylesheet" type="text/css" media="screen" href="css/mnviewer_style.css"> -->
     <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js" type="text/javascript"></script>
@@ -137,7 +139,7 @@
                 </table>
         </span>
     </div>
-    <script src="js/PanCanviewer.js"></script>
+    <script src="js/PanCanviewer_Lite.js"></script>
 </body>
 
 </html>
