about to remove heatmap code

--- a/dsa_adrc/static/index_clean.html
+++ b/dsa_adrc/static/index_clean.html
@@ -16,12 +16,12 @@
         <link rel="stylesheet" media="screen" href="css/mnv/bootstrap.min.css"/>
         <link rel="stylesheet" media="screen" href="css/mnv/style.css"/>
 
+<script src="bower_components/d3/d3.js"></script>
 
 
    <!--  <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/openseadragon/built-openseadragon/openseadragon/openseadragon.min.js"></script>
     --> <!-- endbower
-<!--     <script src="bower_components/d3/d3.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/jquery-ui.theme.css" />
